--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ ol ul{
   /* Z Part Start */
 .zpart{
     padding: 250px 0;
-    background: #e31414;
+    background: #e2e8de;
 }
 .parents{
     position: relative;
@@ -126,7 +126,7 @@ ol ul{
 .two{
     width: 150px;
     height:150px;
-    background: #f0f9e6;
+    background: #1ec3f9;
     position: absolute;
     top: 25px;
     left: 25px;
